@@ -15,6 +15,7 @@ version 0.8.1 - Not released, available at https://simupop.svn.sourceforge.net/s
 		and pySelector to pass specified information fields to user-defined
 		functions.
   - BUG: Fix a new functions in hapMapUtil.py
+  - BUG: stop displaying full path name in the title of the parameter dialog.
 
 
 version 0.8.0 - (Rev 1215) Aug 14, 2007
